# clightning-plugin-api

./: .travis.yml  Cargo.toml  README.md
examples/: hello_world.rs  state.rs  subscription.rs
src/: lib.rs
