[package]
name = "clightning-plugin-api"
version = "0.1.0"
authors = ["Sebastian Geisler <sebastian@blockstream.io>"]
edition = "2018"

[dependencies]
clightningrpc = {git = "https://github.com/laanwj/rust-clightning-rpc.git"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
crossbeam = "0.7.1"